# temporal-worker-controller-demo

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
activity/: demo_activity.py
api/: main.py
k8s/: namespace.yaml  temporal-connection.example.yaml  temporal-worker-deployment.example.yaml
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css
worker/: main.py
workflows/: workflow_a.py  workflow_b.py  workflow_c.py
